--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,26 +1,32 @@
-name: Generate Snake Animation
+name: Generate snake animation
 
 on:
-  schedule:
-    - cron: "0 0 * * *"  # 每天运行一次
-  workflow_dispatch:      # 手动触发
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
 
-permissions:
-  contents: write   # 👈 加上这一行才能 push 到仓库
+  workflow_dispatch:
+
+  push:
+    branches:
+    - main
 
 jobs:
-  build:
+  generate:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
+    timeout-minutes: 5
+
     steps:
-      - uses: Platane/snk@v3
+      - name: generate snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          outputs: |
-            dist/github-snake.svg
-            dist/github-snake-dark.svg?palette=github-dark
+          outputs: dist/snake.svg?palette=github-dark
 
-      - name: Push generated snake animation
-        uses: crazy-max/ghaction-github-pages@v3
+
+      - name: push snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
